cluster/apps/networking/traefik/external/unraid/domain/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: domain
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.102.86
    ports:
      - name: default
        port: 3000
        protocol: TCP
