cluster/apps/networking/traefik/external/unraid/domain/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain
  namespace: external
spec:
  ports:
    - name: default
      port: 3000
      protocol: TCP
      targetPort: 3000
  clusterIP: None
  type: ClusterIP
