cluster/apps/networking/traefik/external/unraid/domain/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: face-man-profile
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd
  name: domain
  namespace: external
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: domain
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_DOMAIN}"
      secretName: domain-tls
